cluster/lab/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: gitea
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: gitea
