cluster/lab/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "git"
spec:
  rules:
    - host: git.hef.sh
      http:
        paths:
          - backend:
              service:
                name: gitea-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
